--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
     <!-- JS SCRIPTS -->
-    <script defer src="/js/db.js"></script>
-    <script defer src="/js/script.js"></script>
+    <script defer src="js/db.js"></script>
+    <script defer src="js/script.js"></script>
     <title>ATM test</title>
   </head>
 
