Added readme and notification for invalid user

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 required
               />
             </div>
-            <a class="card-link" href="#"
+            <a
+              class="card-link"
+              href="https://github.com/romtega/atm-layout/tree/main#readme"
               >No sabes cual es tu usuario o contraseña?</a
             >
             <button class="btn" id="btn-login">Entrar</button>
