added some tooltip notifications

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
     <!-- JS SCRIPTS -->
-    <script defer src="js/db.js"></script>
     <script defer src="js/script.js"></script>
     <script defer src="js/messages.js"></script>
+    <script defer src="js/db.js"></script>
 
     <title>ATM test</title>
   </head>
 
   <body>
+    <div class="tooltip" id="tooltip"></div>
     <nav class="main-nav">
       <a class="nav-link" href="#"
         ><ion-icon class="nav-icon" name="card-outline"></ion-icon
